fix margin for page on tablet

--- a/src/pages/startups/Startups.scss
+++ b/src/pages/startups/Startups.scss
@@ -20,10 +20,12 @@
 
 	@include tabletBig {
 		padding: 0 0 90px;
+		margin-top: -25px;
 	}
 
 	@include tabletSmall {
 		padding-bottom: 0;
+		margin-top: 0;
 	}
 }
 
